
Ver.5.2 (in development)
- Record Copying is supported for single record, and also with associated records for PDO.
- Handle some operators of conditions ('!=', '>', '>=', '<', '<=') as valid when using FileMaker 
  Server.
- The "button-names" key in a context of definition file supports to customize the button names.
- The list aggregate function was introduced.
- [BUG FIX] The definition file editor supports the 'soft-delete' key, and also the field which
  cant contain ether boolean or string value appropriately.
- [BUG FIX] Fix an error when the value of 'operator' key in 'query' key is '=' in a definition 
  file using FileMaker Server.
- [BUG FIX] Calculation bug fixed. In case of multiple uses of a calculated property.
- [BUG FIX] Fix 'inline' and 'end-of-sibling' key options of validation. The affected version is 
  5.1 only.

Ver.5.1 (May 22, 2015)
- Support uploading a file to FileMaker's container field when using FileMaker Server 13 or later.
- Improve the compatibility with file upload component and Mobile Safari.
- Add the sample application of uploading a file to FileMaker's container field in the 
  "Sample_webpage" directory and update the sample database (TestDB.fmp12).
- Calculated property can use the unbound fields as items in the expression. You don't need to set the target
  (like qty@style.color) in the "field" of "calculation", just set the field name.
- Update phpseclib to version 0.3.10.
- Change SHA-1 JavaScript library.
  (tiny-sha1 <https://code.google.com/p/tiny-sha1/> is contained in the INTER-Mediator.)
- Improve error handling in DB_FileMaker_FX class when loading FX.php.
- Avoid using the @-operator for error suppression in NotifyServer.php to reduce bug risk.
- Eliminate die() in INTER-Mediator.php to reduce bug risk.
- Remove duplication in MessageStrings_ja.php and modify MessageStrings.php.
- Add the 'memo' field in sample databases.
- The script to build the VM contains installation of samba and sharing the web root.