@@ -178,12 +178,11 @@ var IMLibElement = {
                 }
             }
         }
-        if (nodeTag === "INPUT" || nodeTag === "SELECT" || nodeTag === "TEXTAREA")   {
+        if (nodeTag === "INPUT" || nodeTag === "SELECT" || nodeTag === "TEXTAREA") {
             INTERMediatorLib.addEvent(element, "blur", function (e) {
-                //console.log("Event Dispatcher: blur");
-                IMLibUI.validation(element);
+                var idValue = element.id;
+                IMLibUI.valueChange(idValue, true);
             });
-
         }
         return needPostValueSet;
     },
